# td-docs-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
config/: claude_code.md  claude_desktop.md  copilot-instructions.md  cursor.md  vscode_copilot.md
skills/: TD_SKILLS.md  prompt-glsl-cleanup.md  prompt-python-cleanup.md  td-common-mistakes.md  td-delayed-calls.md  td-extension-template.md  td-glsl.md  td-ml.md  td-oop.md  td-python-environment.md  td-python-patterns.md  td-python-style.md  td-replicator.md  td-resources.md  td-snippets.md  td-threading.md
src/td_mcp/: __init__.py  cleaner.py  crawler.py  server.py
td_docs/CHOPs/: Ableton_Link_CHOP.md  AbletonlinkCHOP_Class.md  AnalyzeCHOP_Class.md  Analyze_CHOP.md  AngleCHOP_Class.md  Angle_CHOP.md  AttributeCHOP_Class.md  Attribute_CHOP.md  Audio_Band_EQ_CHOP.md  Audio_Binaural_CHOP.md  Audio_Device_In_CHOP.md  Audio_Device_Out_CHOP.md  Audio_Dynamics_CHOP.md  Audio_File_In_CHOP.md  Audio_File_Out_CHOP.md  Audio_Filter_CHOP.md  Audio_Movie_CHOP.md  Audio_NDI_CHOP.md  Audio_Oscillator_CHOP.md  Audio_Para_EQ_CHOP.md  Audio_Play_CHOP.md  Audio_Render_CHOP.md  Audio_Spectrum_CHOP.md  Audio_Stream_In_CHOP.md  Audio_Stream_Out_CHOP.md  Audio_VST_CHOP.md  Audio_Web_Render_CHOP.md  AudiobandeqCHOP_Class.md  AudiobinauralCHOP_Class.md  AudiodeviceinCHOP_Class.md  AudiodeviceoutCHOP_Class.md  AudiodynamicsCHOP_Class.md  AudiofileinCHOP_Class.md  AudiofileoutCHOP_Class.md  AudiofilterCHOP_Class.md  AudiomovieCHOP_Class.md  AudiondiCHOP_Class.md  AudiooscillatorCHOP_Class.md  AudioplayCHOP_Class.md  (+304 more)
(+1103 files in other folders)
